trying to fix iphone white space

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,10 +10,14 @@
 html,
 body,
 #root {
+  margin: 0;
+  padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+
 }
 
 a {
